# ESP8266-AT-Kaa

./: README.md
client/arduino/: AT-Kaa.cpp  AT-Kaa.h
firmware/: CMakeLists.txt  Makefile  README.md  TODO  build.sh  esp8266.cmake
firmware/driver/: uart.c
firmware/include/: cmd.h  cmd_list.h  cmd_parse.h  config.h  kaa_client.h  log_upload.h  profile_upd.h
firmware/ld/: eagle.app.v6.ld
firmware/src/: cmd.c  cmd_parse.c  kaa_client.c  log_upload.c  profile_upd.c
firmware/user/: user_main.c
